--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>YUKI'S PORTFORIO</title>
+	<title>YUKI'S PORTFOLIO</title>
 	<meta name="description" content="０から始めるWebデザイン">
 
 	<!--CSS-->
