--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 	<div id="target"></div>
 
-	<section class="profile">
+	<section id="profile">
 		<h1>About Me</h1>
 		<div class="container">
 			<img src="images/YUKI.jpg" alt="YUKI">
@@ -128,7 +128,7 @@
 		</div>
 	</section>
 
-	<section class="skills">
+	<section id="skills">
 		<h1>Skills</h1>
 		<div class="container">
 			<div class="services ja">
@@ -235,7 +235,7 @@
       </div>
 	</section>
 
-	<section class="works">
+	<section id="works">
 		<h1>Works</h1>
 		<div class="mosya-container">
 			<div class="container">
@@ -372,7 +372,7 @@
 		</div>
 	</div>
 
-	<section class="contact">
+	<section id="contact">
 		<h1>Contact</h1>
 		<div class="container">
 	</section>
