--- a/index.html
+++ b/index.html
@@ -375,6 +375,22 @@
 	<section id="contact">
 		<h1>Contact</h1>
 		<div class="container">
+
+		<div class="info">
+			<div class="tel">
+				<div class="container">
+					<p><i class="bi bi-telephone-fill"></i><span>Blowish</span></p>
+					<p>03-6260-8696</p>
+				</div>
+			</div>
+			<div class="img">
+			</div>
+			<div class="mail">
+				<div class="container">
+					<p><i class="bi bi-envelope-fill"></i><span class="ja">メールアドレス</span></p>
+					<p><a href="mailto:yuki.katou@blowish.jp">yuki.katou@blowish.jp</a></p>
+				</div>
+			</div>
 	</section>
 
 	<footer class="footer">
