--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>YUKI'S PORTFOLIO</title>
-	<meta name="description" content="０から始めるWebデザイン">
+	<!-- <meta name="description" content="０から始めるWebデザイン"> -->
 
 	<!--CSS-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -74,13 +74,9 @@
 			</div>
 			<div class="msg">
 				<h1>
-					A Budding Web Designer,<br>
+					Web Designer,<br>
 					YUKI
 				</h1>
-				<p class="ja">
-					一日、一歩。<br>
-					ビギナーのYUKIが、Webデザイナーとして活躍するまでの道。
-				</p>
 				<button><a href="https://twitter.com/IT_enginer"><i class="bi bi-twitter"></i>FOLLOW ME</a></button>
 			</div>
 		</div>
@@ -108,7 +104,7 @@
           <tr>
             <th scope="row">趣味</th>
             <td colspan="3">
-							・とにかく食べること<br>
+							・兎に角食べること<br>
 							・コアラマットレスで寝ること<br>
 							・プチプラの化粧品探索<br>
 							・オンラインゲーム<br>
@@ -118,9 +114,10 @@
           <tr>
             <th scope="row">コメント</th>
             <td colspan="3">
-							人の役に立ち、人の喜ぶ顔を見ることが大好きです。<br><br>
-							学生の頃から接客業を経験し、お客様の満足度向上のためにあれこれと試行錯誤してきました。<br><br>
-							未経験で入ったIT業界ですが、お客様の笑顔のため、努力を継続してもっともっと技術を向上させていきます。
+							人の役に立ち、人の喜ぶ顔を見ることが大好きです。<br>
+							学生の頃から様々な接客業を経験し、お客様の満足度向上のためにあれこれと試行錯誤してきました。<br><br>
+							未経験で入ったIT業界ですが、コミュニケーション力と適応力を生かし、重宝いただいております。<br>
+							お客様の笑顔のため、努力を積み重ねさらに活躍できるようにしていきます。
 						</td>
           </tr>
         </tbody>
