--- a/index.html
+++ b/index.html
@@ -139,13 +139,12 @@
 					<div class="detail programming">
 						<div class="container">
 							<div class="main">
-								<p>下記言語を習得中です。</p>
+								<p>下記言語を使用しております。</p>
 								<ul>
 									<li>HTML / CSS</li>
 									<li>Javascript</li>
-									<li>PHP</li>
+									<li>PHP (Wordpress)</li>
 								</ul>
-								<p>また、Wordpressテーマの開発中です。</p>
 							</div>
 							<footer>
 								<button>閉じる</button>
@@ -216,7 +215,7 @@
 					<div class="detail video">
 						<div class="container">
 							<div class="main">
-								<p>約1年間、「Camtasia」というツールを用いて様々な動画を作成しました。</p>
+								<p>「Camtasia」というツールを用いて様々な動画を作成しました。</p>
 									<ul>
 										<li>Microsoftサービスの解説動画</li>
 										<li>新入社員研修用動画</li>
@@ -241,10 +240,6 @@
 				<div id="mask" class="hidden"></div>
 	
 				<div class="mosya-items">
-					<div class="mosya">
-						<img src="images/blowish.png" alt="Blowish" class="modal-link">
-						<p>Blowish</p>
-					</div>
 	
 					<div class="mosya">
 						<img src="images/Airbnb.png" alt="Airbnb" class="modal-link">
@@ -256,43 +251,32 @@
 
 		<div class="original-container">
 			<div class="container">
-				<h2>STEP 2. <span class="ja">オリジナル</span></h2>
+				<h2>STEP 2. <span class="ja">実績</span></h2>
 				<div class="original-items ja">
+					<div class="original">
+						<img src="images/blowish.png" alt="Blowish" class="modal-link">
+						<p>Blowish</p>
+					</div>
+
 					<div class="original">
 						<img src="images/IT会社1.png" alt="IT Company1" class="modal-link">
 						<p>IT会社①</p>
 					</div>
+
 					<div class="original">
 						<img src="images/IT会社2.png" alt="IT Company2" class="modal-link">
 						<p>IT会社②</p>
 					</div>
+
 					<div class="original">
 						<img src="images/テーマパーク.png" alt="Theme Park" class="modal-link">
 						<p>テーマパーク</p>
 					</div>
+
 				</div>
 			</div>
 		</div>
 	</section>
-
-	<div class="modal-window hidden">
-		<div class="container">
-				<h1>Blowish</h1>
-				<p class="ja">
-					まずは自社のホームページの模写から始め、Webデザインに欠かせない基本的なJSスキルを学習しました。
-				</p>
-				<ul class="ja">
-					<li>モーダルウィンドウの実装</li>
-					<li>アコーディオンの実装</li>
-					<li>カルーセルの実装</li>
-				</ul>
-				<div class="screenshots">
-					<img src="images/blowish_PC.png" alt="Blowish PC版デザイン">
-					<img src="images/blowish_mobile.png" alt="Blowish Mobile版デザイン">
-				</div>
-				<button class="ja modal-close">閉じる</button>
-		</div>
-	</div>
 
 	<div class="modal-window hidden">
 		<div class="container">
@@ -314,9 +298,29 @@
 
 	<div class="modal-window hidden">
 		<div class="container">
+				<h1>Blowish</h1>
+				<p class="ja">
+					自社サイトのResponsibleデザインの修正提案を行いました。<br>
+					下記技術を使用しております。
+				</p>
+				<ul class="ja">
+					<li>モーダルウィンドウの実装</li>
+					<li>アコーディオンの実装</li>
+					<li>カルーセルの実装</li>
+				</ul>
+				<div class="screenshots">
+					<img src="images/blowish_PC.png" alt="Blowish PC版デザイン">
+					<img src="images/blowish_mobile.png" alt="Blowish Mobile版デザイン">
+				</div>
+				<button class="ja modal-close">閉じる</button>
+		</div>
+	</div>
+
+	<div class="modal-window hidden">
+		<div class="container">
 				<h1>IT Company 1</h1>
 				<p class="ja">
-					企業を立ち上げたばかりの会社のサイトの修正依頼を受け、より見やすいサイトへ改善しました。
+					たち上げたばかりの会社サイトの修正依頼を受け、より見やすいサイトへ改善しました。
 				</p>
 				<ul class="ja">
 					<li>サイトデザインの大幅変更</li>
@@ -334,8 +338,7 @@
 		<div class="container">
 				<h1>IT Company 2</h1>
 				<p class="ja">
-					クラウドワークスでのサイト作成依頼を1つピックアップし、自分なりにアレンジをして作成してみました。<br>
-					※あくまで練習の一環で、実際に受注したわけではありません。
+					LP作成依頼を受け、アレンジを加えて作成しました。<br>
 				</p>
 				<ul class="ja">
 					<li>Bootstrapでのサイト作成効率化</li>
@@ -353,8 +356,7 @@
 		<div class="container">
 				<h1 class="ja">テーマパーク</h1>
 				<p class="ja">
-					情報が散乱しているサイトを1つピックアップし、シンプルなサイトへ改善しました。<br>
-					※あくまで練習の一環で、実際に受注したわけではありません。
+					情報が散乱しているサイトを、シンプルなサイトへ改善しました。<br>
 				</p>
 				<ul class="ja">
 					<li>空白を広めに取ることを意識し、視覚から情報を得やすい工夫を</li>
