--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>YUKI'S PORTFOLIO</title>
-	<!-- <meta name="description" content="０から始めるWebデザイン"> -->
 
 	<!--CSS-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -116,7 +115,7 @@
             <td colspan="3">
 							人の役に立ち、人の喜ぶ顔を見ることが大好きです。<br>
 							学生の頃から様々な接客業を経験し、お客様の満足度向上のためにあれこれと試行錯誤してきました。<br><br>
-							未経験で入ったIT業界ですが、コミュニケーション力と適応力を生かし、重宝いただいております。<br>
+							コミュニケーション力と適応力を生かし、重宝いただいております。<br>
 							お客様の笑顔のため、努力を積み重ねさらに活躍できるようにしていきます。
 						</td>
           </tr>
